<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <TextView
        android:id="@+id/tvregis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelregister"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.049" />

    <EditText
        android:id="@+id/Rusername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/nama"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvregis"
        app:layout_constraintVertical_bias="0.072" />

    <EditText
        android:id="@+id/Remail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Rusername"
        app:layout_constraintVertical_bias="0.048" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="140dp"
        android:layout_height="27dp"
        android:ems="10"
        android:text="@string/Jeniskelamin"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Remail"
        app:layout_constraintVertical_bias="0.062" />

    <CheckBox
        android:id="@+id/chkbox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lakilaki"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.077"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/Remail"
        app:layout_constraintVertical_bias="0.05" />

    <CheckBox
        android:id="@+id/chkpr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prempuan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.26"
        app:layout_constraintStart_toEndOf="@+id/chkbox1"
        app:layout_constraintTop_toBottomOf="@+id/Remail"
        app:layout_constraintVertical_bias="0.049" />

    <TextView
        android:id="@+id/tvagama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Agama"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.078" />

    <CheckBox
        android:id="@+id/chkislam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Islam"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.26"
        app:layout_constraintStart_toEndOf="@+id/tvagama"
        app:layout_constraintTop_toBottomOf="@+id/chkbox1"
        app:layout_constraintVertical_bias="0.053" />

    <CheckBox
        android:id="@+id/chkkristen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Kristen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.264"
        app:layout_constraintStart_toEndOf="@+id/tvagama"
        app:layout_constraintTop_toBottomOf="@+id/chkislam"
        app:layout_constraintVertical_bias="0.044" />

    <CheckBox
        android:id="@+id/chkbudha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="8dp"
        android:text="Budha"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toEndOf="@+id/chkkristen"
        app:layout_constraintTop_toBottomOf="@+id/chkshindu"
        app:layout_constraintVertical_bias="0.015" />

    <CheckBox
        android:id="@+id/chkkonghucu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Konghucu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.637"
        app:layout_constraintStart_toEndOf="@+id/chkshindu"
        app:layout_constraintTop_toBottomOf="@+id/chkbox1"
        app:layout_constraintVertical_bias="0.054" />

    <CheckBox
        android:id="@+id/chkatheis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Atheis"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.552"
        app:layout_constraintStart_toEndOf="@+id/chkbudha"
        app:layout_constraintTop_toBottomOf="@+id/chkkonghucu"
        app:layout_constraintVertical_bias="0.044" />

    <CheckBox
        android:id="@+id/chkshindu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hindu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.241"
        app:layout_constraintStart_toEndOf="@+id/chkislam"
        app:layout_constraintTop_toBottomOf="@+id/chkbox1"
        app:layout_constraintVertical_bias="0.054" />

    <EditText
        android:id="@+id/alamat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Alamat"
        android:inputType="textPostalAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chkkristen"
        app:layout_constraintVertical_bias="0.077" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alamat"
        app:layout_constraintVertical_bias="0.083"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tPassword"
            android:inputType="textPassword"/>


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/repassl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="76dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passl"
        app:layout_constraintVertical_bias="0.888"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/repass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/repass"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnbatal"
        android:layout_width="165dp"
        android:layout_height="55dp"
        android:text="@string/batal"
        app:backgroundTint="#F44336"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repassl"
        app:layout_constraintVertical_bias="0.558" />

    <Button
        android:id="@+id/btnregis"
        android:layout_width="197dp"
        android:layout_height="52dp"
        android:text="@string/Register"
        app:backgroundTint="#00E676"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.859"
        app:layout_constraintStart_toEndOf="@+id/btnbatal"
        app:layout_constraintTop_toBottomOf="@+id/repassl"
        app:layout_constraintVertical_bias="0.563" />

</androidx.constraintlayout.widget.ConstraintLayout>